auto publishing updates to notebooks

--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a745c261",
+   "id": "e2df82b7",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dad119b",
+   "id": "447d8b37",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -21,11 +21,15 @@
     "\n",
     "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
-    "In this lecture we study a basic infinite-horizon job search with Markov wage\n",
+    "In this lecture we study a basic infinite-horizon job search problem with Markov wage\n",
     "draws\n",
     "\n",
-    "The exercise at the end asks you to add recursive preferences and compare\n",
-    "the result.\n",
+    ">**Note**\n",
+    ">\n",
+    ">For background on infinite horizon job search see, e.g., [DP1](https://dp.quantecon.org/).\n",
+    "\n",
+    "The exercise at the end asks you to add risk-sensitive preferences and see how\n",
+    "the main results change.\n",
     "\n",
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
    ]
@@ -33,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56a17665",
+   "id": "8cabab7c",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71aaf7ba",
+   "id": "fe0452b6",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -53,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "025f4f14",
+   "id": "d57dcc09",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e3c2c3",
+   "id": "71ca2697",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -79,24 +83,44 @@
     "\n",
     "- jobs are permanent  \n",
     "- unemployed workers receive current compensation $ c $  \n",
-    "- the wage offer distribution $ \\{W_t\\} $ is Markovian  \n",
     "- the horizon is infinite  \n",
-    "- an unemployment agent discounts the future via discount factor $ \\beta \\in (0,1) $  \n",
+    "- an unemployment agent discounts the future via discount factor $ \\beta \\in (0,1) $  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0de288",
+   "metadata": {},
+   "source": [
+    "### Set up\n",
     "\n",
+    "At the start of each period, an unemployed worker receives wage offer $ W_t $.\n",
     "\n",
-    "The wage process obeys\n",
+    "To build a wage offer process we consider the dynamics\n",
     "\n",
     "$$\n",
-    "W_{t+1} = \\rho W_t + \\nu Z_{t+1},\n",
-    "    \\qquad \\{Z_t\\} \\text{ is IID and } N(0, 1)\n",
+    "W_{t+1} = \\rho W_t + \\nu Z_{t+1}\n",
     "$$\n",
     "\n",
-    "We discretize this using Tauchen’s method to produce a stochastic matrix $ P $\n",
+    "where $ (Z_t)_{t \\geq 0} $ is IID and standard normal.\n",
+    "\n",
+    "We then discretize this wage process using Tauchen’s method to produce a stochastic matrix $ P $.\n",
+    "\n",
+    "Successive wage offers are drawn from $ P $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b17627a",
+   "metadata": {},
+   "source": [
+    "### Rewards\n",
     "\n",
     "Since jobs are permanent, the return to accepting wage offer $ w $ today is\n",
     "\n",
     "$$\n",
-    "w + \\beta w + \\beta^2 w + \\cdots = \\frac{w}{1-\\beta}\n",
+    "w + \\beta w + \\beta^2 w + \n",
+    "    \\cdots = \\frac{w}{1-\\beta}\n",
     "$$\n",
     "\n",
     "The Bellman equation is\n",
@@ -108,7 +132,15 @@
     "    \\right\\}\n",
     "$$\n",
     "\n",
-    "We solve this model using value function iteration.\n",
+    "We solve this model using value function iteration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60d04040",
+   "metadata": {},
+   "source": [
+    "## Code\n",
     "\n",
     "Let’s set up a `namedtuple` to store information needed to solve the model."
    ]
@@ -116,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb7b75f4",
+   "id": "abc7d18c",
    "metadata": {
     "hide-output": false
    },
@@ -127,16 +159,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c95b75b0",
+   "id": "6e3e96df",
    "metadata": {},
    "source": [
-    "The function below holds default values and populates the namedtuple."
+    "The function below holds default values and populates the `namedtuple`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90939acf",
+   "id": "8c675f6e",
    "metadata": {
     "hide-output": false
    },
@@ -147,18 +179,73 @@
     "        ρ=0.9,       # wage persistence\n",
     "        ν=0.2,       # wage volatility\n",
     "        β=0.99,      # discount factor\n",
-    "        c=1.0        # unemployment compensation\n",
+    "        c=1.0,       # unemployment compensation\n",
     "    ):\n",
     "    \"Creates an instance of the job search model with Markov wages.\"\n",
     "    mc = qe.tauchen(n, ρ, ν)\n",
-    "    w_vals, P = jnp.exp(mc.state_values), mc.P\n",
-    "    P = jnp.array(P)\n",
+    "    w_vals, P = jnp.exp(mc.state_values), jnp.array(mc.P)\n",
     "    return Model(n, w_vals, P, β, c)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b5f34ff",
+   "id": "cb32ef46",
+   "metadata": {},
+   "source": [
+    "Let’s test it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a653998b",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "model = create_js_model(β=0.98)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed2c97e8",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "model.c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92338104",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "model.β"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85d54803",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "model.w_vals.mean()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dc4803a",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -167,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "436cc53f",
+   "id": "86195805",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5197f9",
+   "id": "fb394524",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -207,14 +294,14 @@
     "\n",
     "Here $ \\mathbf 1 $ is an indicator function.\n",
     "\n",
-    "The statement above means that the worker accepts ($ \\sigma(w) = 1 $) when the value of stopping\n",
-    "is higher than the value of continuing."
+    "- $ \\sigma(w) = 1 $ means stop  \n",
+    "- $ \\sigma(w) = 0 $ means continue.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06f89102",
+   "id": "16ac2170",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +309,7 @@
    "source": [
     "@jax.jit\n",
     "def get_greedy(v, model):\n",
-    "    \"\"\"Get a v-greedy policy.\"\"\"\n",
+    "    \"Get a v-greedy policy.\"\n",
     "    n, w_vals, P, β, c = model\n",
     "    e = w_vals / (1 - β)\n",
     "    h = c + β * P @ v\n",
@@ -232,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f843939d",
+   "id": "fa9c2a22",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -241,15 +328,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c4f8c83",
+   "id": "245b3d90",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "def vfi(model, max_iter=10_000, tol=1e-4):\n",
-    "    \"\"\"Solve the infinite-horizon Markov job search model by VFI.\"\"\"\n",
-    "\n",
+    "    \"Solve the infinite-horizon Markov job search model by VFI.\"\n",
     "    print(\"Starting VFI iteration.\")\n",
     "    v = jnp.zeros_like(model.w_vals)    # Initial guess\n",
     "    i = 0\n",
@@ -268,10 +354,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e2c01a8",
+   "id": "79f04067",
    "metadata": {},
    "source": [
-    "### Computing the solution\n",
+    "## Computing the solution\n",
     "\n",
     "Let’s set up and solve the model."
    ]
@@ -279,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34e232d8",
+   "id": "bdbd9cfc",
    "metadata": {
     "hide-output": false
    },
@@ -288,32 +374,36 @@
     "model = create_js_model()\n",
     "n, w_vals, P, β, c = model\n",
     "\n",
-    "%time v_star, σ_star = vfi(model)"
+    "v_star, σ_star = vfi(model)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "457d5a59",
+   "id": "1b665ab5",
    "metadata": {},
    "source": [
-    "We run it again to eliminate compile time."
+    "Here’s the optimal policy:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "079eb9fc",
+   "id": "1b3f053b",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%time v_star, σ_star = vfi(model)"
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(σ_star)\n",
+    "ax.set_xlabel(\"wage values\")\n",
+    "ax.set_ylabel(\"optimal choice (stop=1)\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a08ff87a",
+   "id": "40786444",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -322,19 +412,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae619900",
+   "id": "2451adc7",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "res_wage = w_vals[jnp.searchsorted(σ_star, 1.0)]"
+    "stop_indices = jnp.where(σ_star == 1)\n",
+    "stop_indices"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6901fd14",
+   "id": "df6d344f",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "res_wage_index = min(stop_indices[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0818384c",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "res_wage = w_vals[res_wage_index]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb3b2c3f",
+   "metadata": {},
+   "source": [
+    "Here’s a joint plot of the value function and the reservation wage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32718e65",
    "metadata": {
     "hide-output": false
    },
@@ -350,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a86fc0be",
+   "id": "4b7795d9",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -358,10 +481,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9734d598",
+   "id": "8b07f70c",
    "metadata": {},
    "source": [
-    "## Exercise 9.1\n",
+    "## Exercise 10.1\n",
     "\n",
     "In the setting above, the agent is risk-neutral vis-a-vis future utility risk.\n",
     "\n",
@@ -381,26 +504,62 @@
     "    \\right\\}\n",
     "$$\n",
     "\n",
-    "When $ \\theta < 0 $ the agent is risk sensitive.\n",
+    "When $ \\theta < 0 $ the agent is risk averse.\n",
     "\n",
     "Solve the model when $ \\theta = -0.1 $ and compare your result to the risk neutral\n",
     "case.\n",
     "\n",
-    "Try to interpret your result."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eddd7248",
-   "metadata": {},
-   "source": [
-    "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#job_search_1)"
+    "Try to interpret your result.\n",
+    "\n",
+    "You can start with the following code:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f179ebe9",
+   "id": "89af5706",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "RiskModel = namedtuple('Model', ('n', 'w_vals', 'P', 'β', 'c', 'θ'))\n",
+    "\n",
+    "def create_risk_sensitive_js_model(\n",
+    "        n=500,       # wage grid size\n",
+    "        ρ=0.9,       # wage persistence\n",
+    "        ν=0.2,       # wage volatility\n",
+    "        β=0.99,      # discount factor\n",
+    "        c=1.0,       # unemployment compensation\n",
+    "        θ=-0.1       # risk parameter\n",
+    "    ):\n",
+    "    \"Creates an instance of the job search model with Markov wages.\"\n",
+    "    mc = qe.tauchen(n, ρ, ν)\n",
+    "    w_vals, P = jnp.exp(mc.state_values), mc.P\n",
+    "    P = jnp.array(P)\n",
+    "    return RiskModel(n, w_vals, P, β, c, θ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "982545ba",
+   "metadata": {},
+   "source": [
+    "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2a196df",
+   "metadata": {},
+   "source": [
+    "## Solution to[ Exercise 10.1](https://jax.quantecon.org/#job_search_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f2364d9",
    "metadata": {
     "hide-output": false
    },
@@ -474,55 +633,47 @@
     "\n",
     "n, w_vals, P, β, c, θ = model_rs\n",
     "\n",
-    "%time v_star_rs, σ_star_rs = vfi(model_rs)"
+    "v_star_rs, σ_star_rs = vfi(model_rs)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d254809c",
+   "id": "1fe69377",
    "metadata": {},
    "source": [
-    "We run it again to eliminate the compilation time."
+    "Let’s plot the results together with the original risk neutral case and see what we get."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb6230a",
+   "id": "c901c407",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "%time v_star_rs, σ_star_rs = vfi(model_rs)"
+    "stop_indices = jnp.where(σ_star_rs == 1)\n",
+    "res_wage_index = min(stop_indices[0])\n",
+    "res_wage_rs = w_vals[res_wage_index]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e913b9f",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "res_wage_rs = w_vals[jnp.searchsorted(σ_star_rs, 1.0)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04e1419c",
+   "id": "877cfcff",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.plot(w_vals, v_star,  alpha=0.8, label=\"RN $v$\")\n",
-    "ax.plot(w_vals, v_star_rs, alpha=0.8, label=\"RS $v$\")\n",
-    "ax.vlines((res_wage,), 150, 400,  ls='--', color='darkblue', alpha=0.5, label=r\"RV $\\bar w$\")\n",
-    "ax.vlines((res_wage_rs,), 150, 400, ls='--', color='orange', alpha=0.5, label=r\"RS $\\bar w$\")\n",
+    "ax.plot(w_vals, v_star,  alpha=0.8, label=\"risk neutral $v$\")\n",
+    "ax.plot(w_vals, v_star_rs, alpha=0.8, label=\"risk sensitive $v$\")\n",
+    "ax.vlines((res_wage,), 100, 400,  ls='--', color='darkblue', \n",
+    "          alpha=0.5, label=r\"risk neutral $\\bar w$\")\n",
+    "ax.vlines((res_wage_rs,), 100, 400, ls='--', color='orange', \n",
+    "          alpha=0.5, label=r\"risk sensitive $\\bar w$\")\n",
     "ax.legend(frameon=False, fontsize=12, loc=\"lower right\")\n",
     "ax.set_xlabel(\"$w$\", fontsize=12)\n",
     "plt.show()"
@@ -530,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95cfb600",
+   "id": "6d92425f",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -541,7 +692,7 @@
   }
  ],
  "metadata": {
-  "date": 1718254771.195203,
+  "date": 1723441295.2838008,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
