--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "da723856",
+   "id": "199f2a82",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74578add",
+   "id": "160b82ff",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,25 +24,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d832aad3",
+   "id": "0b321d24",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
     "One of the key features of JAX is automatic differentiation.\n",
     "\n",
-    "While other software packages also offer this feature, the JAX version is\n",
-    "particularly powerful because it integrates so closely with other core\n",
-    "components of JAX, such as accelerated linear algebra, JIT compilation and\n",
-    "parallelization.\n",
+    "We introduced this feature in [Adventures with Autodiff](https://jax.quantecon.org/autodiff.html).\n",
     "\n",
-    "The application of automatic differentiation we consider is computing economic equilibria via Newton’s method.\n",
+    "In this lecture we apply automatic differentiation to the problem of computing economic equilibria via Newton’s method.\n",
     "\n",
     "Newton’s method is a relatively simple root and fixed point solution algorithm, which we discussed\n",
     "in [a more elementary QuantEcon lecture](https://python.quantecon.org/newton_method.html).\n",
     "\n",
-    "JAX is almost ideally suited to implementing Newton’s method efficiently, even\n",
-    "in high dimensions.\n",
+    "JAX is ideally suited to implementing Newton’s method efficiently, even in high dimensions.\n",
     "\n",
     "We use the following imports in this lecture"
    ]
@@ -50,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61d54d8",
+   "id": "f6628a8f",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ad08c18",
+   "id": "5b930e24",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e435d48c",
+   "id": "40fe4090",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15951d65",
+   "id": "1a87b2b9",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -109,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9f1650",
+   "id": "36d2f172",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "077472fb",
+   "id": "4899f214",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -143,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc9cec33",
+   "id": "e1951705",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679faca2",
+   "id": "257ba15c",
    "metadata": {},
    "source": [
     "Here we go"
@@ -172,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a57d2fa",
+   "id": "51fe099e",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e0f3f74",
+   "id": "a40228c3",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -191,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addfb6db",
+   "id": "4d015677",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -243,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7eb05ba",
+   "id": "4e463baf",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7cc2878",
+   "id": "961490a5",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -265,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a9c6497",
+   "id": "12a318a4",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -277,7 +273,7 @@
     "\n",
     "<a id='equation-multi-newton'></a>\n",
     "$$\n",
-    "p_{n+1} = p_n - J_e(p_n)^{-1} e(p_n) \\tag{3.1}\n",
+    "p_{n+1} = p_n - J_e(p_n)^{-1} e(p_n) \\tag{4.1}\n",
     "$$\n",
     "\n",
     "Here $ J_e(p_n) $ is the Jacobian of $ e $ evaluated at $ p_n $.\n",
@@ -290,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ab9aa6",
+   "id": "ed71cee4",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd5cefd9",
+   "id": "450298bf",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -335,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efb7cf2d",
+   "id": "77070752",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b4aeb27",
+   "id": "7e828954",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -366,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f05f300",
+   "id": "22873ead",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d83a05d9",
+   "id": "43929944",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -388,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6e20e87",
+   "id": "17625db6",
    "metadata": {
     "hide-output": false
    },
@@ -400,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0838f3e",
+   "id": "125680e0",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -409,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a4a72d",
+   "id": "cee2529b",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b50b0e9",
+   "id": "c98a646b",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -430,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5701e438",
+   "id": "1785227c",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae7b8bfc",
+   "id": "c567c9cb",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -451,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e959fada",
+   "id": "0d9868de",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f641ed2b",
+   "id": "ed85c2a0",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -476,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb24e02",
+   "id": "f453e16c",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2cefd87",
+   "id": "af198dae",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -496,10 +492,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91ab8995",
+   "id": "277257c2",
    "metadata": {},
    "source": [
-    "## Exercise 3.1\n",
+    "## Exercise 4.1\n",
     "\n",
     "Consider a three-dimensional extension of [the Solow fixed point\n",
     "problem](https://python.quantecon.org/newton_method.html#the-solow-model) with\n",
@@ -556,10 +552,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ada002",
+   "id": "08da6b70",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
+    "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
     "\n",
     "Let’s first define the parameters for this problem"
    ]
@@ -567,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b3ad5a",
+   "id": "cc26a4c5",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b33ce1ce",
+   "id": "0f03b3b5",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -595,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd335d38",
+   "id": "231e769b",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb74bcef",
+   "id": "5883975e",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -616,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9a030e8",
+   "id": "d13471b0",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "856c5c3e",
+   "id": "8803ff3b",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -646,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "315b0cb9",
+   "id": "98a8a5c8",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7e1da3d",
+   "id": "efeaf892",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -668,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a17ed35",
+   "id": "1faf6cec",
    "metadata": {
     "hide-output": false
    },
@@ -688,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7260239c",
+   "id": "69259c47",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac41fe16",
+   "id": "378352e2",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -712,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08c9877",
+   "id": "4b60bd62",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67cff30e",
+   "id": "ddd86791",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3ee333b",
+   "id": "bb568759",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -750,10 +746,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bffec629",
+   "id": "57c3d4b1",
    "metadata": {},
    "source": [
-    "## Exercise 3.2\n",
+    "## Exercise 4.2\n",
     "\n",
     "In this exercise, let’s try different initial values and check how Newton’s method responds to different starting points.\n",
     "\n",
@@ -796,10 +792,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b2e739",
+   "id": "e46c610c",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
+    "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
     "\n",
     "Define parameters and initial values"
    ]
@@ -807,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "355738a2",
+   "id": "19794eab",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f144f7ef",
+   "id": "36f1239d",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -835,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51db4270",
+   "id": "b44f3cec",
    "metadata": {
     "hide-output": false
    },
@@ -854,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95a85605",
+   "id": "b638d41f",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -867,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeda134b",
+   "id": "c2d78a15",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91195634",
+   "id": "1393dd7b",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -886,7 +882,7 @@
   }
  ],
  "metadata": {
-  "date": 1718254771.3540921,
+  "date": 1723441295.440486,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
