--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be17c2cd",
+   "id": "73dac228",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2208c6a",
+   "id": "308fbcfb",
    "metadata": {},
    "source": [
     "# Troubleshooting\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad2d6303",
+   "id": "2267bf8d",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1247bf2",
+   "id": "ed1f9b8f",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -80,7 +80,7 @@
   }
  ],
  "metadata": {
-  "date": 1718254771.643505,
+  "date": 1723441295.7326856,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
