--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f9fcfa4",
+   "id": "fc0124f6",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437df48b",
+   "id": "67993072",
    "metadata": {},
    "source": [
     "# References\n",
@@ -28,7 +28,7 @@
   }
  ],
  "metadata": {
-  "date": 1718254771.6846137,
+  "date": 1723441295.773831,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
