--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "44b28808",
+   "id": "0861dbbc",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,19 +13,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88edc9e3",
+   "id": "5fb3044b",
    "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
     "- [About](https://jax.quantecon.org/about.html)\n",
     "- [An Introduction to JAX](https://jax.quantecon.org/jax_intro.html)\n",
+    "- [Adventures with Autodiff](https://jax.quantecon.org/autodiff.html)\n",
     "- [Newton’s Method via JAX](https://jax.quantecon.org/newtons_method.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cb80309d",
+   "id": "f0adc71f",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "977021a4",
+   "id": "c13f5e71",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b2da9b4",
+   "id": "f343438f",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a51b452",
+   "id": "6241edb5",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb798e8d",
+   "id": "c1186919",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1213645c",
+   "id": "c0c70497",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -99,7 +100,7 @@
   }
  ],
  "metadata": {
-  "date": 1718254770.9524486,
+  "date": 1723441295.0327506,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
