--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "360e2d8a",
+   "id": "086934c0",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad3cb59c",
+   "id": "7f65ce01",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e34d84c",
+   "id": "d21e1139",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4755e8a2",
+   "id": "b6de8b97",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e697e53",
+   "id": "d2f1abb7",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d91cad2",
+   "id": "b14c7e01",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5613b0f2",
+   "id": "d4b4160f",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9fb780a",
+   "id": "19405ce6",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "670f60c3",
+   "id": "f01e8245",
    "metadata": {},
    "source": [
     "### Constrained planner\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b08ff846",
+   "id": "9bc93d79",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5b13517",
+   "id": "be6dac09",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67056038",
+   "id": "6b3a1bb6",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72974e16",
+   "id": "6973ef12",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e6c0f5",
+   "id": "746ce6d2",
    "metadata": {},
    "source": [
     "Here’s a function to convert the VAR process to a Markov chain evolving on a\n",
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031375eb",
+   "id": "658a5587",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4560b0a3",
+   "id": "89634be6",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05513cd7",
+   "id": "c2730358",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b386ada",
+   "id": "6647c71c",
    "metadata": {},
    "source": [
     "Here’s code for generating the original VAR process, which can be used for\n",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6334b10",
+   "id": "b6ec431b",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "578c4893",
+   "id": "4a1c1713",
    "metadata": {},
    "source": [
     "Let’s check some statistics for both the original and the discretized processes."
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef489df0",
+   "id": "79d5763a",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a15d2da",
+   "id": "f490f5fb",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8a69993",
+   "id": "bc03e7f3",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d59ba6",
+   "id": "9edcf76a",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd16dd20",
+   "id": "575b7a20",
    "metadata": {},
    "source": [
     "## Overborrowing Model\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e657a4b",
+   "id": "03ff5a41",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1783c1d9",
+   "id": "cca1c55e",
    "metadata": {},
    "source": [
     "Here’s flow utility."
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4c636c",
+   "id": "52c05e4f",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6740d0e",
+   "id": "a3434cd8",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08a3c512",
+   "id": "220c7422",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35bb0e19",
+   "id": "08c93a42",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "097ee35e",
+   "id": "a92a9fe9",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0352d02",
+   "id": "c12ad2bd",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48546b1d",
+   "id": "46258671",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f2aad34",
+   "id": "77b3ef07",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4e7fc1",
+   "id": "0fd6abe0",
    "metadata": {},
    "source": [
     "Now we can set up the Bellman operator by maximizing over the choice variable\n",
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e01808",
+   "id": "85708958",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9e820ca",
+   "id": "698cfbd5",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540c823d",
+   "id": "f450e849",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ac191e",
+   "id": "2843fe1f",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f3c42b",
+   "id": "8f4df7ee",
    "metadata": {
     "hide-output": false
    },
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae51ea0",
+   "id": "a4154e76",
    "metadata": {},
    "source": [
     "Here’s some code for value function iteration (VFI)."
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d146d2d",
+   "id": "da51a18a",
    "metadata": {
     "hide-output": false
    },
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57826f6",
+   "id": "29a47abf",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d945b4a9",
+   "id": "4bf023f2",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa17814",
+   "id": "86956295",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee1c2333",
+   "id": "fe220d6d",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5967e286",
+   "id": "092c6a98",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110b89e0",
+   "id": "5e430d40",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b159248e",
+   "id": "eb9a8f2b",
    "metadata": {
     "hide-output": false
    },
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7d2164a",
+   "id": "138f6b35",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5ff87a",
+   "id": "b1f265e2",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a5422ea",
+   "id": "377fe591",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed3162cd",
+   "id": "f9e0e10c",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1ed2f2",
+   "id": "22219df6",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebdc78fc",
+   "id": "aad0468e",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d00849bb",
+   "id": "89f5dfa5",
    "metadata": {
     "hide-output": false
    },
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa276de",
+   "id": "2cfe25c3",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2f553e",
+   "id": "2062c5e3",
    "metadata": {
     "hide-output": false
    },
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b482ce1",
+   "id": "304acbbe",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d313b50b",
+   "id": "e59c2879",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb4f2441",
+   "id": "24798686",
    "metadata": {
     "hide-output": false
    },
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e120a4",
+   "id": "3399e691",
    "metadata": {
     "hide-output": false
    },
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8c0f16a",
+   "id": "c713cce4",
    "metadata": {},
    "source": [
     "We run it again to get rid of compile time."
@@ -1215,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d893120b",
+   "id": "a8a12b48",
    "metadata": {
     "hide-output": false
    },
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db883508",
+   "id": "a049deff",
    "metadata": {
     "hide-output": false
    },
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8ddb10a",
+   "id": "179c75fd",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -1254,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73c1760",
+   "id": "cde6edf7",
    "metadata": {
     "hide-output": false
    },
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db59448",
+   "id": "a25ed43f",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33db1973",
+   "id": "5724d2e4",
    "metadata": {
     "hide-output": false
    },
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae00471a",
+   "id": "bd7449f8",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ef05dbf",
+   "id": "acc141df",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1321,10 +1321,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "042a24b3",
+   "id": "ac43031e",
    "metadata": {},
    "source": [
-    "## Exercise 19.1\n",
+    "## Exercise 20.1\n",
     "\n",
     "Your task is to examine the ergodic distribution of borrowing in the decentralized and\n",
     "planner equilibria.\n",
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48e66005",
+   "id": "b8262de2",
    "metadata": {
     "hide-output": false
    },
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4059cea5",
+   "id": "7e25da6c",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1384,16 +1384,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf56921f",
+   "id": "2ed6fdb5",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#overborrow_1)"
+    "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a2ddd26",
+   "id": "790d1a26",
    "metadata": {
     "hide-output": false
    },
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbfaa9e0",
+   "id": "d5ce9ce1",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1415,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14ea499f",
+   "id": "3df455ca",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d095fd71",
+   "id": "b96e313c",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1436,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe61acb0",
+   "id": "fe5d5e23",
    "metadata": {
     "hide-output": false
    },
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8135ad7d",
+   "id": "4ee8bbae",
    "metadata": {},
    "source": [
     "We suppress some annoying warnings produced by the current version of `seaborn`"
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c17a643",
+   "id": "07d14556",
    "metadata": {
     "hide-output": false
    },
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57fe43b9",
+   "id": "d93ee102",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48819523",
+   "id": "1adf54d5",
    "metadata": {
     "hide-output": false
    },
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881f59cc",
+   "id": "a5fb3478",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)].\n",
@@ -1511,7 +1511,7 @@
   }
  ],
  "metadata": {
-  "date": 1718254771.4808726,
+  "date": 1723441295.693003,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
